my second changes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <div class="detail" id="detail">
         <button class="position1" onclick="closeDisplayDetail()">X</button>
-        <div class="detail-fav" >
+        <!-- <div class="detail-fav" >
             <div class="text-detail">
                 <h2 class="text">ciken kabab</h2>
                 <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -91,7 +91,7 @@
             <div>
                 <a href="">Watch video now</a>
             </div>
-        </div>
+        </div> -->
         
     </div>
 
