my third changes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <div class="detail" id="detail">
+    <div class="detail display1" id="detail">
         <button class="position1" onclick="closeDisplayDetail()">X</button>
         <!-- <div class="detail-fav" >
             <div class="text-detail">
